<resources>
    <string name="app_name">蟠桃园智能社区管理系统</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="home">主页</string>
    <string name="setting">设置</string>
    <string name="share">分享</string>
    <string name="aboutus">关于我们</string>
    <string name="exit">退出登录</string>
    <string name="infoxiaoqu">社区数据</string>
    <string name="infozhuhu">家庭数据</string>
    <string name="actxiaoqu">社区活动</string>
    <string name="xgzhence">相关政策</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>